--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.google.android.gms">
+    package="com.google.android.googlequicksearchbox">
 
     <application
         android:forceQueryable="true"
@@ -10,12 +10,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         tools:targetApi="30">
-
-        <provider
-            android:name=".GServicesProvider"
-            android:authorities="com.google.android.gsf.gservices"
-            android:exported="true"
-            tools:ignore="ExportedContentProvider" />
 
     </application>
 </manifest>
