--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 30
 
     defaultConfig {
-        applicationId "com.google.android.tss"
+        applicationId "com.google.android.tts"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 210319286
